--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-    <p>This is a testing area for web development as well as a landing page for photos and anything else that strikes my fancy.</p>
+    <p>Test text</p>
 </div><!-- /.blurb -->
