--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-    <p>Test text</p>
+    <p>Test text again!</p>
 </div><!-- /.blurb -->
