Set up basic sass.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Home » Cullen Schill
 ---
 <div class="blurb">
     <p>Test text again! Last time!</p>
