Building out folder structure.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Home » Cullen Schill
+title: Home
 ---
-<div class="blurb">
+<div>
     <p>Test text again! Last time!</p>
 </div><!-- /.blurb -->
